# rsubst

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration_test.rs
