[package]
name = "rsubst"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["John Downey <jdowney@gmail.com>"]
description = "A small, envsubst-like utility with conditional logic and advanced templating."
repository = "https://github.com/jtdowney/rsubst"
readme = "README.md"
keywords = ["template", "jinja", "envsubst", "cli", "docker"]
categories = ["command-line-utilities", "template-engine"]
homepage = "https://github.com/jtdowney/rsubst"
documentation = "https://docs.rs/rsubst"
exclude = [".github/*"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
minijinja = "2"

[dev-dependencies]
tempfile = "3"
